# viber-bot

./: bot.py  dummy.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: create_image.yaml  main_sotex-viberbot.yml  push_prod.yaml  update.yaml
